assets/css/style.css
/* ... */
.comment_wrap .comment_reply a:hover{color:#ffc925;}
.comments-area .comment-list ul.children{margin-left:60px;}
.comment-respond{margin-top:65px;}
.comment-respond .name-wrap,
.comment-respond .email-wrap{width:48.049%;float:left;}
.comment-respond .email-wrap{float:right;}
.comment-respond .message-wrap{width:100%;clear:left;}
.comment-respond fieldset textarea{height:170px;margin-bottom:30px;}
.comment-respond .submit-wrap{text-align:center;margin:0;}
.comment-respond .submit-wrap input{display:inline-block;width:auto;}
#footer{background:#1e1e1e;color:#777;padding:80px 0 70px;position:relative;}
#footer-widgets .widget_socials .socials a{display:inline-block;width:60px;height:60px;line-height:56px;border:2px solid #474747;font-size:20px;color:#979797;margin:0 18px;-webkit-border-radius:50%;-moz-border-radius:50%;border-radius:50%;}
#footer-widgets .widget_socials .socials a:hover{color:#ffc925;border-color:#ffc925;}
#footer-widgets .widget .widget-title{font-size:18px;color:#fff;position:relative;padding-bottom:15px;margin-bottom:30px;}
#footer-widgets .widget .widget-title:after{content:"";position:absolute;left:0;bottom:0;width:30px;height:2px;background-color:#ffc925}
#footer-widgets .widget.widget_tag_cloud .tagcloud:before,
#footer-widgets .widget.widget_tag_cloud .tagcloud:after{display:table;clear:both;content:"";}
#footer-widgets .widget.widget_tag_cloud .tagcloud a{float:left;color:#777;font-size:13px;border:1px solid #2c2c2c;background-color:#2c2c2c;padding:2px 17px;margin:0 7px 7px 0;}
#footer-widgets .widget.widget_tag_cloud .tagcloud a:hover{color:#fff;background-color:#ffc925;border-color:#ffc925;}
#footer-widgets .widget.widget_information .item{position:relative;padding-left:30px;}
#footer-widgets .widget.widget_information .item:before{content:"";font-family:"FontAwesome";color:#ffc925;font-size:12px;position:absolute;left:0;top:3px;}
#footer-widgets .widget.widget_information .item.address:before{content:"\f041"}
#footer-widgets .widget.widget_information .item.email:before{content:"\f003"}
#footer-widgets .widget.widget_information .item.phone:before{content:"\f095"}
#footer-widgets .widget.widget_instagram .instagram-wrap{margin:0 -7.5px;}
#footer-widgets .widget.widget_instagram .instagram-wrap .instagram_badge_image{padding:0 7.5px;margin:0 0 15px 0;width:33.333%;float:left;height:auto;position:relative;}
#footer-widgets .widget.widget_instagram .instagram-wrap .instagram_badge_image img{width:100%;height:auto;}
#footer-widgets .widget.widget_instagram .instagram-wrap .instagram_badge_image .item{position:relative;}
#footer-widgets .widget.widget_instagram .instagram-wrap .instagram_badge_image .item:after,
#footer-widgets .widget.widget_instagram .instagram-wrap .instagram_badge_image .item:before{content:"";position:absolute;left:0;top:0;width:100%;height:100%;background-color:rgba(250,201,37, 0.9);filter:alpha(opacity=0);opacity:0;visibility:hidden;-webkit-transition:all 0.238s ease 0s;-moz-transition:all 0.238s ease 0s;transition:all 0.238s ease 0s;}
#footer-widgets .widget.widget_instagram .instagram-wrap .instagram_badge_image .item:before{background:url("assets/img/plus-icon.png") no-repeat center center;z-index:2;}
#footer-widgets .widget.widget_instagram .instagram-wrap .instagram_badge_image .item:hover:before,
#footer-widgets .widget.widget_instagram .instagram-wrap .instagram_badge_image .item:hover:after{filter:alpha(opacity=100);opacity:1;visibility:visible;}
#footer-widgets .widget.widget_twitter ul.tweets{margin:0;list-style:none;}
#footer-widgets .widget.widget_twitter ul.tweets li{padding-top:25px;margin-top:22px;border-top:1px solid #2d2b2b;}
#footer-widgets .widget.widget_twitter ul.tweets li:first-child{margin-top:0;padding-top:0;border:0;}
#footer-widgets .widget.widget_twitter .tweets .inner{position:relative;padding-left:30px;}
#footer-widgets .widget.widget_twitter .tweets .inner:before{content:"\f099";font-family:"FontAwesome";font-size:16px;color:#ffc925;position:absolute;left:0;top:0;}
#footer-widgets .widget.widget_twitter .timestamp{font-size:10px;color:#ffc925;}
#footer-widgets .widget.widget_links ul{list-style:none;margin:0;}
#footer-widgets .widget.widget_links ul li{float:left;width:50%;}
#footer-widgets .widget.widget_links ul li.last{float:right;}
#footer-widgets .widget.widget_links ul li a{position:relative;padding-left:30px;color:#777;line-height:30px;}
#footer-widgets .widget.widget_links ul li a:before{content:"\f178";font-family:"FontAwesome";position:absolute;left:0;top:4px;color:#626262;font-size:10px;line-height:normal;-webkit-transition:all ease .238s;-moz-transition:all ease .238s;transition:all ease .238s;}
#footer-widgets .widget.widget_links ul li a:hover,
#footer-widgets .widget.widget_links ul li a:hover:before{color:#ffc925;}
#bottom{background-color:#151515;color:white;text-align:center;padding:13px 0;font-size:12px;}
.back-to-top{position:fixed !important;right:25px;bottom:-50px;background-color:#ffc925;color:#fff;font-family:"Montserrat", sans-serif;display:block;font-size:11px;width:40px;height:40px;line-height:40px;text-align:center;filter:alpha(opacity=0);opacity:0;visibility:hidden;z-index:9999;cursor:pointer;-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px;}
.back-to-top:hover{background-color:#333;color:#fff;}
.back-to-top.show{filter:alpha(opacity=100);opacity:1;visibility:visible;bottom:30px;}
.fixed-btn{position:fixed;bottom:50%;left:-13%;background:#0FACF3;width:30%;height:5%;line-height:45px;border-radius:3px;cursor:pointer;transform:rotate(90deg);margin:0;padding:0;}
.fixed-btn p{text-transform:uppercase;font-family:arial;font-weight:900;color:#fff;text-align:center;}
.fixed-btn:active{box-shadow:0 0;}
.bwp-spacer:before,
.bwp-spacer:after{content:"";display:table;clear:both;}
/* ... */

